# universalL2

./: .gitignore  Automate.spec  README.md  pyproject.toml
.github/workflows/: build-desktop.yml
docs/: architecture.md
examples/demo-repository/: README.md
examples/demo-repository/src/: app.py  payments.py
examples/demo-repository/tests/: test_app.py
scripts/: build_release.py
src/automate_core/: __init__.py  cli.py  engine.py  models.py  workflow.py
src/automate_desktop/: __init__.py  __main__.py  app.py  mainwindow.py  storage.py  theme.py
tests/: test_core.py  test_coverage.py  test_desktop.py  test_workflow.py
